change stream websocket notification, change documentation swagger
